--- a/index.html
+++ b/index.html
@@ -4,15 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link
-      href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto:400,500,700,900&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:700|Roboto:400,500,700,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/0.6.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="page-header header-hiade">
+    <header class="header-hiade page-header">
       <div class="continer site-nav">
         <nav class="site-nav">
           <a href="" class="logo list"><span class="span">Web</span> Studio</a>
@@ -323,15 +320,11 @@
 
     <!--подвал-->
     <footer class="bg">
-      <div class="continer footer-t">
+      <div class="continer footer-continer">
         <address class="address list footer-list">
-          <a href="" class="logo list footer logo-footer"
-            ><span class="span">Web</span> Studio</a
-          >
+          <a href="" class="logo list footer logo-footer"><span class="span">Web</span> Studio</a>
           <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
-          <a href="mailto:info@devstudio.com" class="mail list"
-            >info@devstudio.com</a
-          >
+          <a href="mailto:info@devstudio.com" class="mail list">info@devstudio.com</a>
           <a href="tel:+380961111111" class="mail list">+38 096 111 11 11</a>
         </address>
         <div class="footer footer-list">
@@ -344,7 +337,7 @@
                 </svg>
               </a>
             </li>
-            <li class="social-footer" >
+            <li class="social-footer">
               <a href="" aria-label="иконка instagtam" class="icon-footer">
                 <svg width="20px" ; height="20px" ;>
                   <use href="./imeges/symbol-defs.svg#icon-twitter" </use>
@@ -369,14 +362,14 @@
         </div>
         <div class="footer footer-list">
           <h2 class="title">Подпишитесь на рассылку</h2>
-          <form class="form-buttom" action="">            
-              <input class="footer-form" type="email" name="email"  placeholder="E-mail">
-              <button class="button" type="submit">Подписаться
-                <svg class="icon-footer-button" width="24px" height="24px">
-                  <use href="./imeges/telegram.svg#icon-icon-send"></use>
-                </svg>
-              </button>            
-          </form>               
+          <form class="form-buttom" action="">
+            <input class="footer-form" type="email" name="email" placeholder="E-mail">
+            <button class="button" type="submit">Подписаться
+              <svg class="icon-footer-button" width="24px" height="24px">
+                <use href="./imeges/telegram.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </form>
         </div>
       </div>
       <p class="continer copiraite">2020 | Developed by GoIT Students</p>
@@ -421,6 +414,7 @@
           <div class="checkbox-modal">
             <input class="checkbox-icon" type="checkbox" id="checkbox">
             <label class="checkbox-text" for="checkbox">Соглашаюсь с рассылкой и принимаю <a class="checkbox-document list" href=""> Условия договора</a></label>
+            <!-- <span class="checkbox-text1"></span> -->
           </div>
           <button class="button-form list" type="submit">Отправить</button>
     
