--- a/portfolio.html
+++ b/portfolio.html
@@ -220,7 +220,7 @@
 
     <!--подвал-->
     <footer class="bg">
-      <div class="continer footer-t">
+      <div class="continer footer-continer">
         <address class="address list footer-list">
           <a href="" class="logo list footer logo-footer"><span class="span">Web</span> Studio</a>
           <p class="text">г. Киев, пр-т Леси Украинки, 26</p>
